46
================

28/07/22 Auto disable shelterview drag and drop for mobile devices
27/07/22 Show complete address for people under general search
27/07/22 Add maint_db_dump_dbfs_files cron task
24/07/22 Merge/fix PR #1151, add Sponsor flag and Sponsor/Vet fields (Roman Safovich)
24/07/22 Handle favicon.ico calls from old browsers
24/07/22 Cache 404s at proxy/CDN level as they can be a DoS vector
23/07/22 Config option to allow future intakes on shelter (on by default) #1154
22/07/22 Prevent /image and /service sending session cookie for caching
22/07/22 Retry and error notification mechanism for failed S3 PUT #1155
22/07/22 Use block elements instead of <br> in adoptable_js
21/07/22 Hebrew translation update (Saggi Neuemann)
19/07/22 Do not look up manufacturer/batch numbers at all if option is off
18/07/22 Annual figures: do not count neuter/spays before datebroughtin
17/07/22 Stop new animals with future intake date appearing on shelter #1150
15/07/22 Fix bug where person chooser not showing similar people during add
15/07/22 Show alerts for unsigned/signed documents on animal records
12/07/22 Fix FTP chdir/recovery path for reconnection in AdoptAPet
12/07/22 Fix partially implemented additional field type for Time
12/07/22 Fix bug where clone_from_template copied the time of DateBroughtIn
08/07/22 ActiveLitterMates wordkey
07/07/22 Fix bug that causes display of SQL interface errors to be delayed
07/07/22 Fix bug using LOGTYPE in reports after refactoring #1096
05/07/22 Restrict the maximum width of the useragent in incoming forms
05/07/22 Visual improvements to default online form template
05/07/22 Use efficient memory cache for collation/receipt sequences #1149
02/07/22 Use utf-8 when writing transaction logs
02/07/22 Set base tag for online forms so that they can be proxied #1147
01/07/22 Do not show the report toolbar for the html_report service call
01/07/22 Prevent hidden pickuplocation on new animal choosing an inactive item