@@ -1,6 +1,7 @@
 46
 ================
 
+28/07/22 Add caller and victim as columns for incident results #1157
 28/07/22 Auto disable shelterview drag and drop for mobile devices
 27/07/22 Show complete address for people under general search
 27/07/22 Add maint_db_dump_dbfs_files cron task
